--- a/package.json
+++ b/package.json
@@ -5,22 +5,27 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-ts": "tsc",
+    "watch-ts": "tsc -w",
     "postinstall": "npm run build-ts",
-    "start": "npm run serve",
     "serve": "node build/server.js",
-    "watch-node": "nodemon dist/server.js",
-    "watch-ts": "tsc -w"
+    "start": "npm run serve",
+    "watch-node": "nodemon build/server.js"
   },
   "author": "Elfin Sanjaya <elfinsanjaya1207@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.17.2",
     "@types/node": "^13.1.1",
+    "morgan": "^1.9.1",
     "nodemon": "^2.0.2",
     "ts-node": "^8.5.4",
     "typescript": "^3.7.4"
   },
   "dependencies": {
+    "@types/morgan": "^1.7.37",
+    "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1"
   }
 }
