--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   "devDependencies": {
     "@types/express": "^4.17.2",
     "@types/node": "^13.1.1",
-    "morgan": "^1.9.1",
     "nodemon": "^2.0.2",
     "ts-node": "^8.5.4",
     "typescript": "^3.7.4"
@@ -26,6 +25,7 @@
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "morgan": "^1.9.1"
   }
 }
